2006-01-18  Jackson Harper  <jackson@ximian.com>

	* Splitter.cs: Set the default dock style for the splitter control
	in the constructor.

2006-01-18  Alexander Olk  <alex.olk@googlemail.com>

	* ThemeGtk.cs: Corrected StateType and ShadowType for
	  gtk_paint_box

2006-01-18  Alexander Olk  <alex.olk@googlemail.com>

	* Control.cs: Make use of Theme.DoubleBufferingSupported
	* ThemeGtk.cs:
	  - Added drawing for flat style buttons
	  - Added ScrollBar drawing

2006-01-18  Alexander Olk  <alex.olk@googlemail.com>

	* ThemeClearlooks.cs: Removed some unneeded code.
	* ThemeGtk.cs: First part of ThemeGtk enhancements.

2006-01-17  Peter Dennis Bartok  <pbartok@novell.com>

	* LinkLabel.cs: We need to update the hover drawing when
	  leaving the control as well.

2006-01-18  Jordi Mas i Hernandez <jordimash@gmail.com>

	* DataGrid.cs: Clicking on non empty areas in the columns
	   area was giving an exception

2006-01-17  Jackson Harper  <jackson@ximian.com>

	* ThemeWin32Classic.cs:
	* ListView.cs: Do not draw/clip the headers when the header style
	is None.

2006-01-17  Jordi Mas i Hernandez <jordimash@gmail.com>

	* DataGrid.cs: Fixes 77260
	
2006-01-17  Jordi Mas i Hernandez <jordimash@gmail.com>

	* DataGrid.cs: Clicking on a column on a empty grid was giving
	  an exception

2006-01-17  Peter Dennis Bartok  <pbartok@novell.com>

	* DataGrid.cs (OnKeyDown): Don't use the array if it's empty
	  or any keypress will crash the grid.

2006-01-17  Mike Kestner  <mkestner@novell.com>

	* MainMenu.cs (OnMenuChanged): set Height=0 to cause relayout.
	* ThemeWin32Classic.cs (CalcItemSize): clear Height/Width for 
	invisible/previously-visible items.
	[Fixes #76909]

2006-01-17  Alexander Olk  <alex.olk@googlemail.com>

	* ThemeClearlooks.cs:
	- Added CL_Draw_Button method; now other theme controls that are 
	  not derived from button or do not have a button can draw buttons
	  too
	- Updated ComboBox drawing
	- Beautified RadioButton drawing